syntax = "proto3";

package api;

import "github.com/vine-io/flow/api/flow.proto";

option go_package = "github.com/vine-io/flow/api";
option java_package = "io.vine.flow.v1";
option java_multiple_files = true;

service FlowRpc {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Call (CallRequest) returns (CallResponse);
    rpc Step (StepRequest) returns (StepResponse);
    rpc Pipe (stream PipeRequest) returns (stream PipeResponse);
}

enum Topic {
    TopicUnknown = 0;
    TopicCall = 1;
    TopicStep = 2;
}

enum StepAction {
    StepActionUnknown = 0;
    StepActionPrepare = 1;
    StepActionCommit = 2;
    StepActionRollback = 3;
    StepActionCancel = 4;
}

message RegisterRequest {
    string id = 1;
    repeated Echo echoes = 2;
    repeated Step steps = 3;
}

message RegisterResponse {}

message CallRequest {
    string id = 1;
    bytes request = 2;
}

message CallResponse {
    bytes response = 1;
}

message StepRequest {
    string id = 1;
    StepAction action = 2;
}

message StepResponse {
    bytes response = 1;
}

message PipeRequest {
    string id = 1;
    Topic topic = 2;
    PipeCallResponse call = 3;
    PipeStepResponse step = 4;

}

message PipeResponse {
    Topic topic = 1;
    PipeCallRequest call = 2;
    PipeStepRequest step = 3;
}

message PipeCallRequest {
    bytes data = 1;
}

message PipeCallResponse {
    bytes data = 1;
    string error = 2;
}

message PipeStepRequest {
    StepAction action = 1;
}

message PipeStepResponse {
    bytes data = 1;
    string error = 2;
}